k8s/cuisines/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cuisines-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cuisines
  template:
    metadata:
      labels:
        app: cuisines
    spec:
      containers:
        - image: cuisines_image
          imagePullPolicy: Never
          name: cuisines-container
          ports:
            - containerPort: 3000
