k8s/cuisines/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cuisines-service
spec:
  type: ClusterIP
  ports:
    - port: 4000     
      targetPort: 3000 
  selector:
    app: cuisines
