k8s/cuisines/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cuisines-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/cuisines
            pathType: 'Prefix'
            backend:
              service:
                name: cuisines-service
                port:
                  number: 80
